--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "24.7.0"
+    "node": "24.x"
   },
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
